potential CPU inaccuracy fixes

--- a/templates/loadavg.html
+++ b/templates/loadavg.html
@@ -1,6 +1,6 @@
 <div id="load" class="load">
     <table>
-      </th><th>CPU load</th><th>Thead Load</th><th>used RAM</th><th>free RAM</th></tr>
-      </th><td>{{ loadCPU }}</td><td>{{ loadThreads }}</td><td>{{ loadRAM_used }}</td><td>{{ loadRAM_free }}</td></tr>
+      </th><th>CPU load</th><th>used RAM</th><th>free RAM</th></tr>
+      </th><td>{{ loadCPU }}</td><td>{{ loadRAM_used }}</td><td>{{ loadRAM_free }}</td></tr>
     </table>
   </div>
